<resources>
    <string name="app_name">Quotes Hub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="motivational_quotes">Motivational Quotes</string>
    <string name="love_quotes">Love Quotes</string>
    <string name="inspirtaional_quotes">Inspirational Quotes</string>
    <string name="break_quotes">Breakup Quotes</string>
    <string name="friendship_quotes">Friendship Quotes</string>
    <string name="favourite_quotes">Favourite Quotes</string>
    <string name="categories">Categories</string>
    <string name="next_quote">Next Quote</string>
    <string name="last_quote">Last Quote</string>
    <string name="share">Share this Quote with</string>
    <string name="favorite">Favorite</string>
    <string name="title_activity_love__quotes">Love_Quotes</string>
    <string name="title_activity_inspiration__quotes">Inspiration_Quotes</string>
    <string name="title_activity_breakup__quotes">Breakup_Quotes</string>
    <string name="title_activity_friendship__quotes">Friendship_Quotes</string>
    <string name="title_activity_favorite__quotes">Favorite_Quotes</string>
    <string name="no_favorites">No Favorites</string>
    <string name="title_activity_motivational__quotes">Motivational_Quotes</string>
    <string name="random_quote">Random Quote</string>
    <string name="title_activity_failure__quotes">Failure_Quotes</string>
    <string name="failure_quotes">Failure Quotes</string>
    <string name="title_activity_witty__quotes">Witty_Quotes</string>
    <string name="witty_quotes">Witty Quotes</string>
    <string name="others">Others</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="explore">EXPLORE</string>
    <string name="rate_us">Rate Us</string>
    <string name="solid_color">Solid Color</string>
    <string name="choose_a_solid_color_as_a_theme">Choose a solid color as a theme</string>
    <string name="theme_library">Theme Library</string>
    <string name="choose_a_theme_from_the_library">Choose a theme from the library</string>
    <string name="text_size">Text Size</string>
    <string name="change_text_size_of_the_quote">Change text size of the quote</string>
    <string name="default_theme">Default Theme</string>
    <string name="apply_the_default_theme">Apply the default theme</string>
    <string name="theme">Theme</string>
    <string name="swipe_right_left">Swipe Right / Left</string>
    <string name="swipe_right_for_previous_quote_and_swipe_left_for_next_quote">Swipe right for previous quote and swipe left for next quote</string>
    <string name="swipe_up">Swipe Up</string>
<<<<<<< HEAD
    <string name="swipe_up_to_add_in_favorites">Swipe up to add in favorites</string>
    <string name="swipe_down">Swipe Down</string>
    <string name="swipe_down_to_copy_the_quote">Swipe down to copy the quote</string>
    <string name="other_categories">Other Categories</string>
    <string name="long_press_the_quote_to_copy">Long press the quote to copy</string>
    <string name="long_press">Long Press</string>
=======
    <string name="swipe_up_to_add_quote_to_the_favorites_or_delete_quote_from_favorites">Swipe up to add Quote to the Favorites</string>
    <string name="swipe_down">Swipe Down</string>
    <string name="swipe_down_to_copy_the_quote_to_the_clipboard">Swipe down to copy the Quote to the Clipboard</string>
    <string name="rate_us">Rate Us</string>
    <string name="solid_color">Solid Color</string>
    <string name="choose_a_solid_color_as_a_theme">Choose a solid color as a theme</string>
    <string name="theme_library">Theme Library</string>
    <string name="choose_a_theme_from_the_library">Choose a theme from the library</string>
    <string name="text_size">Text Size</string>
    <string name="change_text_size_of_the_quote">Change text size of the quote</string>
    <string name="default_theme">Default Theme</string>
    <string name="apply_the_default_theme">Apply the default theme</string>
    <string name="theme">Theme</string>
>>>>>>> master
    <string-array name="textsize_array">
        <item>default</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
    </string-array>
<<<<<<< HEAD
</resources>
=======
</resources>
>>>>>>> master
