<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="20"
        android:title="@string/favourite_quotes"
        android:icon="@drawable/ic_favorite_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:orderInCategory="50"
        android:title="@string/settings"
        android:id="@+id/action_settings" />
    <item
        android:id="@+id/action_help"
        android:title="@string/help"
        android:orderInCategory="80" />
<<<<<<< HEAD
=======
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="50"
        android:title="Settings"/>
>>>>>>> master
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="90"
        android:title="@string/feedback"/>
    <item
        android:id="@+id/action_rateus"
        android:orderInCategory="90"
        android:title="@string/rate_us"/>
</menu>
